--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.17.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.503.0",
     "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
