--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.17.0",
+    "@neondatabase/serverless": "^1.0.0",
+    "@prisma/adapter-neon": "^6.6.0",
+    "@prisma/client": "^6.6.0",
+    "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
+    "neondb": "^0.0.2",
     "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
