--- a/web/package.json
+++ b/web/package.json
@@ -14,26 +14,32 @@
     "@prisma/adapter-neon": "^6.6.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tanstack/react-query": "^5.76.1",
     "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "neondb": "^0.0.2",
-    "next": "^15.2.5",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wouter": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/wouter": "^2.0.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
